fix(Settings): version label was almost not visible

--- a/src/routes/Settings/styles.less
+++ b/src/routes/Settings/styles.less
@@ -69,7 +69,8 @@
             .version-info-label {
                 flex: 0 1 auto;
                 margin: 0.5rem 0;
-                color: var(--overlay-color);
+                color: var(--primary-foreground-color);
+                opacity: 0.5;
             }
         }
 
